# BitDefenderC

./: L4_4.c  a.out  clion.txt  header.h  key  key.pub  labw01.txt  test
ArrayVectorTester/: 001.in  002.in  003.in  CMakeLists.txt  main.c  tester.c  tester.h
ArrayVectorTester/Output/: 003.out
BST/: BST.c  BST.h  main.c
BSTTester/: BSTTester.c  CMakeLists.txt  main.c
BSTTester/Input/: 001.in  002.in
BSTTester/Output/: 001.out  003.out
BalancedBST/: BalancedBST.c  BalancedBST.h  CMakeLists.txt  main.c
BalancedBSTTester/: BalancedBSTTester.c  BalancedBSTTester.h  CMakeLists.txt  main.c
BalancedBSTTester/Input/: 001.in
BalancedBSTTester/Output/: 002.out  003.out
HashTable/: CMakeLists.txt  HashTable.c  HashTable.h  LinkedList.c  main.c
HashTableTester/: CMakeLists.txt  hashtester.c  main.c
HashTableTester/Input/: 001.in
HashTableTester/Output/: 001.out
HashTableTester/cmake/: FindLibDS.cmake
L04_e06/: L04_e06.cbp  L04_e06.depend  L04_e06.layout  NUMERE.c  NUMERE.h  main.c
L04_ex05/: L04_ex05.cbp  L04_ex05.depend  L04_ex05.layout  header.c  header.h  main.c
L3_P03_Nagy_Lilla/: L3_P03_Nagy_Lilla.cbp  L3_P03_Nagy_Lilla.depend  L3_P03_Nagy_Lilla.layout  main.c
L3_P04_Nagy_Lilla/: L3_P04_Nagy_Lilla.cbp  L3_P04_Nagy_Lilla.depend  L3_P04_Nagy_Lilla.layout  main.c
L3_P05_Nagy_Lilla/: L3_P05_Nagy_Lilla.c  L3_P05_Nagy_Lilla.cbp  L3_P05_Nagy_Lilla.depend  L3_P05_Nagy_Lilla.layout  l5_ex4.c  l5_ex4.h  main.c
L3_P06_Nagy_Lilla/: L3_P06_Nagy_Lilla.c  L3_P06_Nagy_Lilla.cbp  L3_P06_Nagy_Lilla.depend  L3_P06_Nagy_Lilla.layout  main.c
L4_e04/: L4_4
L4_ex7/: L4_ex7.cbp  L4_ex7.depend  L4_ex7.layout  VECTOR.c  VECTOR.h  main.c
L5_e1/: L5_e1.cbp  L5_e1.depend  L5_e1.layout  module.c  module.h
L5_e2/: L5_e2.cbp  L5_e2.depend  L5_e2.layout  header.c  header.h  main.c
L5_ex3/: L5_ex3.cbp  L5_ex3.depend  L5_ex3.layout  ex3.c  ex3.h  main.c
L8_P03_Nagy_Lilla/: LinkedList.h  Vector.h  lab8e3.c  lab8e3.h  main.c
Lab08Ex03/: CMakeLists.txt  lab8e3.c  lab8e3.h  main.c
LastLab/: CMakeLists.txt  in.txt  lastLab.c  lastLab.h  main.c
LinkedList/: CMakeLists.txt  LinkedList.c  LinkedList.cpp  LinkedList.h  main.c
LinkedListTester/: CMakeLists.txt  main.c  tester.c  tester.h
MinHeap/: CMakeLists.txt  MinHeap.c  MinHeap.h  Vector.c  Vector.h  main.c
MinHeapTester/: MinHeapTester.c  main.c
Nagy_Lilla/: Nagy_Lilla.cbp  Nagy_Lilla.depend  Nagy_Lilla.layout  main.c  modul.c  modul.h
Nagy_Lilla_Proiect/MinHeapTester/: CMakeLists.txt  MinHeapTester.c  MinHeapTester.h  main.c
Nagy_Lilla_Proiect/MinHeapTester/Input/: 001.in
Vector/: Vector.c  Vector.h  main.c
dynamic/: dynamic.cbp  main.c
l06e06/: e06.c  input.txt  l06e06.cbp  l06e06.depend  l06e06.layout  main.c  output.txt
l06e07/: e07.c  e07.h  input.txt  l06e07.cbp  l06e07.depend  l06e07.layout  main.c  output.txt
l06e08/: CMakeLists.txt  e08.c  e08.h  input.txt  (+4 more)
(+114 files in other folders)
